; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_badblocks.c_ext2fs_u32_list_iterate_begin.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_badblocks.c_ext2fs_u32_list_iterate_begin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32 }

@EXT2_ET_MAGIC_BADBLOCKS_LIST = common dso_local global i32 0, align 4
@EXT2_ET_MAGIC_BADBLOCKS_ITERATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ext2fs_u32_list_iterate_begin(i32 %0, %struct.TYPE_4__** %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__**, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_4__** %1, %struct.TYPE_4__*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @EXT2_ET_MAGIC_BADBLOCKS_LIST, align 4
  %10 = call i32 @EXT2_CHECK_MAGIC(i32 %8, i32 %9)
  %11 = call i64 @ext2fs_get_mem(i32 4, %struct.TYPE_4__** %6)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %7, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i64, i64* %7, align 8
  store i64 %15, i64* %3, align 8
  br label %27

16:                                               ; preds = %2
  %17 = load i32, i32* @EXT2_ET_MAGIC_BADBLOCKS_ITERATE, align 4
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %26 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %5, align 8
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %26, align 8
  store i64 0, i64* %3, align 8
  br label %27

27:                                               ; preds = %16, %14
  %28 = load i64, i64* %3, align 8
  ret i64 %28
}

declare dso_local i32 @EXT2_CHECK_MAGIC(i32, i32) #1

declare dso_local i64 @ext2fs_get_mem(i32, %struct.TYPE_4__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
